reducer, activa chat

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,8 @@
 #API_URL_SYMFONY=http://127.0.0.1:8000/api
 #API_URL_NODE=http://127.0.0.1:8080/api
 REACT_APP_API_URL=http://127.0.0.1:8080/api
+#REACT_APP_URL_SOCKET_SYMFONY = http://localhost:3001
+#REACT_APP_URL_SOCKET_NODE = http://localhost:8080
+REACT_APP_URL_SOCKET='http://localhost:8080'
+
+
