--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "socket.io-client": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
