--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "socket.io-client": "^4.5.2",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.0.0-rc.3",
     "sweetalert2": "^11.7.5",
     "web-vitals": "^2.1.4"
   },
